<resources>
    <string name="app_name">Personal Task Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task_dialog_title">Task added successfully \n</string>
    <string name="add_task_dialog_desc">New task added successfully. we will notify you  before deadline arrives.</string>
    <string name="accept">OK!\n</string>
    <string name="edit_task">Edit Task</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="deadline_button_text">Deadline</string>
    <string name="add_task_button_text">Add Task</string>
    <string name="delete_task_button_text">Delete</string>
    <string name="edit_task_button_text">Edit</string>
    <string name="no_time_remained">No time Remained</string>
    <string name="delete_task_dialog_title">delete task</string>
    <string name="delete_task_dialog_desc">Do you rally want to delete this task?\nThis action is permanent and cant be undone</string>
    <string name="settings_button_cs">settings_button</string>
</resources>